.metadata/.plugins/org.eclipse.cdt.ui/P069-72.build.log
18:23:42 **** Build of configuration Debug for project P069-72 ****
make all 
Building file: ../src/P069.c
Invoking: Cygwin C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/P069.d" -MT"src/P069.d" -o "src/P069.o" "../src/P069.c"
../src/P069.c: In function 'main':
../src/P069.c:19:12: error: assignment of read-only location '*(cards + 2u)'
   cards[2] = cards[1];   //JQQ
            ^
../src/P069.c:20:12: error: assignment of read-only location '*(cards + 1u)'
   cards[1] = cards[0];   //JJQ
            ^
../src/P069.c:21:12: error: assignment of read-only location '*cards'
   cards[0] = cards[2];   //
            ^
../src/P069.c:22:12: error: assignment of read-only location '*(cards + 2u)'
   cards[2] = cards[1];   //
            ^
../src/P069.c:23:12: error: assignment of read-only location '*(cards + 1u)'
   cards[1] = a_card;     //
            ^
make: *** [src/P069.o] Error 1
src/subdir.mk:18: recipe for target 'src/P069.o' failed

18:23:43 Build Finished (took 289ms)

